--- a/03-Dades/Servidor/nodejs_server/public/index.html
+++ b/03-Dades/Servidor/nodejs_server/public/index.html
@@ -1,14 +1,89 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <link rel="stylesheet" href="estils.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-        <title>Pàgina</title>
-    </head>
-    <body>
-        Hola món
-    </body>
-</html>
+   <head>
+       <meta charset="UTF-8">
+       <title>Principal</title>
+       <link rel="stylesheet" href="index.css">
+       <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
+   <body id="inicio">
+       <section class="encabezado">
+                <section class="encabezad1">
+                    <span class="material-symbols-outlined"></span>
+                    <h1 class="oswald-uniquifier">Choose Your Story</h1>
+                     <span class="material-symbols-outlined"></span>
+                </section>
+                <section>
+                    <nav>
+                        <a href="index.html">Inicio</a>
+                        <a href="historia.html">Historia</a>
+                        <a href="Contacte.html">Contacte</a>
+                        <a href="ABout US.html">About Us</a>
+                        <a href="instrucciòn.html">Instrucciones</a>
+                    </nav>
+                </section>
+        </section>
+         <main>
+            <section class="hero">
+                <img  class="imagen" src="Imagenes/prueba.jpeg" alt="">
+                <div class="texto-publicitario">
+                    <div class="cajas">Primer texto</div>
+                    <div class="cajas">Primer texto</div>
+                    <div class="cajas">Primer texto</div>
+                    <div class="cajas">Primer texto</div>
+                </div>
+                <section class="hero1">
+                    <div class="caja2">Como se juega?:</div>
+                    <div class="card reveal">
+                        <p >El juego se juega tal</p>
+                        <p>Instruciones estas</p>
+                        <p>Y màs contenido</p>   
+                    </div>
+                    <ul>
+                        <li class="fila">Instrucciòn 1</li>
+                        <li class="fila">Instrucciòn 2</li>
+                        <li class="fila">Instrucciòn 3</li>
+                        <li class="fila">Instrucciòn 4</li>
+                        <li class="fila">Instrucciòn 5</li>
+                        <li class="fila">Instrucciòn 6</li>
+                        <li class="fila">Instrucciòn 7</li>
+                        <li class="fila">Instrucciòn 8</li>
+                    </ul>
+                </section>
+                <section class="vectorial">
+                    <h2>Ficha activa del jugador</h2>
+                    <svg class="ficha" viewBox="0 0 100 100">
+                        <circle cx="50" cy="50" r="35" />
+                        <circle cx="50" cy="50" r="15" class="centro" />
+                    </svg>
+                </section>
+            </section>
+     
+         </main>
+
+        <footer class="footer">
+            <div class="footer-right">
+            <div class="social-icons">
+            <a href="https://twitter.com" target="_blank">
+            <span class="material-icons">flutter_dash</span>
+            </a>
+            <a href="https://instagram.com" target="_blank">
+            <span class="material-icons">photo_camera</span>
+            </a>
+            <a href="https://facebook.com" target="_blank">
+            <span class="material-icons">facebook</span>
+            </a>
+            <a href="https://tiktok.com" target="_blank">
+            <span class="material-icons">music_note</span>
+            </a>
+            </div>
+            <p class="copyright">
+            © 2025 Juego HTML-Proyecto
+            </p>
+            </div>
+    </footer>
+   </body>
+</html> 
