--- a/03-Dades/Servidor/nodejs_server/public/historia.html
+++ b/03-Dades/Servidor/nodejs_server/public/historia.html
@@ -34,19 +34,20 @@
                     <div class="tarjeta2">
                         <div class="tarjeta-inner">
                             <div class="tarjeta-descripcion tarjeta2-front">
-                                <img src="Imagenes/prueba.jpeg" alt="Personaje 1">
+                                <img src="Imagenes/Pana Miguen en el juego.png" alt="Personaje 1">
                                 <h3>Personaje 1</h3>
                             </div>
                             <!-- Cara trasera -->
                             <div class="tarjeta-descripcion tarjeta2-back">
-                                <img src="Imagenes/Prueba2.jpg" alt="Personaje 1 dibujo">
+                                <img src="Imagenes/El Legendario Pana Miguel.png" alt="Personaje 1 dibujo">
                             </div>
                         </div>
                     </div>        
                     <div class="descripcion">
                         <p>
-                            Aquí va la historia del personaje, su papel en los eventos
-                            importantes y cualquier detalle relevante.
+                            En los antiguos reinos de Bigotaria, se decía que cuando el mundo estuviera al borde del Game Over, surgiría un héroe improbable:
+                            un pequeño gato capaz de caminar erguido como los antiguos.
+                            Sir Mírrin nació como un simple gatito de taberna, durmiendo sobre sacos de grano y robando pescado. Pero una noche, al tocar por accidente el Laúd Ígneo de los Pixeles Eternos, despertó su conciencia heroica. Desde entonces, nunca volvió a caminar en cuatro patas.
                         </p>
                     </div>
                 </div>
@@ -56,19 +57,24 @@
                     <div class="tarjeta2">
                         <div class="tarjeta-inner">
                             <div class="tarjeta-descripcion tarjeta2-front">
-                                <img src="Imagenes/prueba.jpeg" alt="Personaje 1">
+                                <img src="Imagenes/Princesa Miguel-juego.png" alt="Personaje 1">
                                 <h3>Personaje 2</h3>
                             </div>
                             <!-- Cara trasera -->
                             <div class="tarjeta-descripcion tarjeta2-back">
-                                <img src="Imagenes/Prueba2.jpg" alt="Personaje 1 dibujo">
+                                <img src="Imagenes/Princesa Real.png" alt="Personaje 1 dibujo">
                             </div>
                         </div>
                     </div>        
                     <div class="descripcion">
                         <p>
-                            Aquí va la historia del personaje, su papel en los eventos
-                            importantes y cualquier detalle relevante.
+                            Minina nació en el castillo de Pixelia Alta, hija de la 
+                            antigua dinastía felina. A diferencia de 
+                            otros gatos, nunca jugó ni corrió.
+                             Prefería quedarse de pie, observando 
+                             el mundo con una calma inquietante, 
+                             como si entendiera las reglas invisibles 
+                             del juego.
                         </p>
                     </div>
                 </div>
@@ -101,30 +107,61 @@
                 </h1>
                     <section class="contenedor-mecanica">
                         <section class="tarjeta1">
-                            <img src="Imagenes/prueba.jpeg" alt="">
+                            <img src="Imagenes/Captura de pantalla de 2026-01-19 18-59-15.png" alt="">
                             <h1>Mecanica</h1>
                         </section>
                         <section class="tarjeta1">
-                            <img src="Imagenes/prueba.jpeg" alt="">
+                            <img src="Imagenes/Captura de pantalla de 2026-01-19 19-00-01.png" alt="">
                             <h1>Mecanica</h1>
                         </section>
                         <section class="tarjeta1">
-                            <img src="Imagenes/prueba.jpeg" alt="">
+                            <img src="Imagenes/Captura de pantalla de 2026-01-19 19-00-11.png" alt="">
                             <h1>Mecanica</h1>
                         </section>
                         <section class="tarjeta1">
-                            <img src="Imagenes/prueba.jpeg" alt="">
+                            <img src="Imagenes/Captura de pantalla de 2026-01-19 19-00-19.png" alt="">
                             <h1>Mecanica</h1>
                         </section>
                         <section class="tarjeta1">
-                            <img src="Imagenes/prueba.jpeg" alt="">
+                            <img src="Imagenes/Captura de pantalla de 2026-01-19 19-00-30.png" alt="">
                             <h1>Mecanica</h1>
                         </section>
                         <section class="tarjeta1">
-                            <img src="Imagenes/prueba.jpeg" alt="">
+                            <img src="Imagenes/Captura de pantalla de 2026-01-19 19-00-39.png" alt="">
                             <h1>Mecanica</h1>
                         </section>
                     </section>
+                   
+
+                <h1>Seccions descriptives amb la història del joc
+                     i dibuixos/fotos/Juego2
+                </h1>
+                    <section class="contenedor-mecanica">
+                        <section class="tarjeta1">
+                            <img src="Imagenes/" alt="">
+                            <h1>Mecanica</h1>
+                        </section>
+                        <section class="tarjeta1">
+                            <img src="Imagenes/" alt="">
+                            <h1>Mecanica</h1>
+                        </section>
+                        <section class="tarjeta1">
+                            <img src="Imagenes/" alt="">
+                            <h1>Mecanica</h1>
+                        </section>
+                        <section class="tarjeta1">
+                            <img src="Imagenes/" alt="">
+                            <h1>Mecanica</h1>
+                        </section>
+                        <section class="tarjeta1">
+                            <img src="Imagenes/" alt="">
+                            <h1>Mecanica</h1>
+                        </section>
+                        <section class="tarjeta1">
+                            <img src="Imagenes/" alt="">
+                            <h1>Mecanica</h1>
+                        </section>
+                    </section>    
             </div>
          </main>
 
