--- a/03-Dades/Servidor/nodejs_server/public/historia.html
+++ b/03-Dades/Servidor/nodejs_server/public/historia.html
@@ -108,27 +108,27 @@
                     <section class="contenedor-mecanica">
                         <section class="tarjeta1">
                             <img src="Imagenes/Captura de pantalla de 2026-01-19 18-59-15.png" alt="">
-                            <h1>Mecanica</h1>
+                            <h1>En el Reino Felinia, la princesa Lira y el gato mago Nimbus investigan una luz del cometa que amenaza la memoria del reino.</h1>
                         </section>
                         <section class="tarjeta1">
                             <img src="Imagenes/Captura de pantalla de 2026-01-19 19-00-01.png" alt="">
-                            <h1>Mecanica</h1>
+                            <h1>¿Investigar la luz o seguir al festival? Elige: Investigar → portal; No → festival (marca consecuencias).</h1>
                         </section>
                         <section class="tarjeta1">
                             <img src="Imagenes/Captura de pantalla de 2026-01-19 19-00-11.png" alt="">
-                            <h1>Mecanica</h1>
+                            <h1>Explora, guarda partida, usa hechizos (Eco Temporal), activa la Marca Lunar y busca Fragmentos del Cometa.</h1>
                         </section>
                         <section class="tarjeta1">
                             <img src="Imagenes/Captura de pantalla de 2026-01-19 19-00-19.png" alt="">
-                            <h1>Mecanica</h1>
+                            <h1>Lira: intuición y Marca; Nimbus: magia temporal; Umbros: antagonista que roba recuerdos.</h1>
                         </section>
                         <section class="tarjeta1">
                             <img src="Imagenes/Captura de pantalla de 2026-01-19 19-00-30.png" alt="">
-                            <h1>Mecanica</h1>
+                            <h1>Corazones (vidas), monedas, pergaminos (hechizos), Fragmento Mayor (objeto clave).</h1>
                         </section>
                         <section class="tarjeta1">
                             <img src="Imagenes/Captura de pantalla de 2026-01-19 19-00-39.png" alt="">
-                            <h1>Mecanica</h1>
+                            <h1>Finales según objetos: Marca / Hechizo / Fragmento / Marca+Hechizo / Supremo — cada uno con su epílogo.</h1>
                         </section>
                     </section>
                    
