--- a/03-Dades/Servidor/nodejs_server/public/index.html
+++ b/03-Dades/Servidor/nodejs_server/public/index.html
@@ -28,29 +28,34 @@
         </section>
          <main>
             <section class="hero">
-                <img  class="imagen" src="Imagenes/prueba.jpeg" alt="">
+                <img  class="imagen" src="Imagenes/PJ1.webp" alt="">
                 <div class="texto-publicitario">
-                    <div class="cajas">Primer texto</div>
-                    <div class="cajas">Primer texto</div>
-                    <div class="cajas">Primer texto</div>
-                    <div class="cajas">Primer texto</div>
+                    <div class="cajas">Escoge tu aventura</div>
+                    <div class="cajas">Toma tus decision</div>
+                    <div class="cajas">Toma tu ruta</div>
+                    <div class="cajas">Explora</div>
                 </div>
                 <section class="hero1">
                     <div class="caja2">Como se juega?:</div>
                     <div class="card reveal">
-                        <p >El juego se juega tal</p>
-                        <p>Instruciones estas</p>
-                        <p>Y màs contenido</p>   
+                        <p >El juego consiste en tomar decisiones y tomar las mejores
+                            opciones posibles, cada una de ellas es importante y te 
+                            llevara a escoger lo que debes hacer
+                        </p>
+                        <p>Las en apartado de instrucciones podràs encontrar una mecànica 
+                            que explica como deben funcionar cada uno de los dos juegos
+                        </p>
+                        <p>Secuelas proximamente</p>   
                     </div>
                     <ul>
-                        <li class="fila">Instrucciòn 1</li>
-                        <li class="fila">Instrucciòn 2</li>
-                        <li class="fila">Instrucciòn 3</li>
-                        <li class="fila">Instrucciòn 4</li>
-                        <li class="fila">Instrucciòn 5</li>
-                        <li class="fila">Instrucciòn 6</li>
-                        <li class="fila">Instrucciòn 7</li>
-                        <li class="fila">Instrucciòn 8</li>
+                        <li class="fila">“Elige tu Destino Felino”</li>
+                        <li class="fila">“Sombras que Despiertan”</li>
+                        <li class="fila">“Rutas que Cambian el Mundo”</li>
+                        <li class="fila">“Juega con tu Memoria”</li>
+                        <li class="fila"> “Desde el Sótano al Cielo”</li>
+                        <li class="fila">“Donde Empieza tu Leyenda”</li>
+                        <li class="fila"> “El Eco de tus Elecciones”</li>
+                        <li class="fila">“Despierta, Cael”</li>
                     </ul>
                 </section>
                 <section class="vectorial">
